--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -7,10 +7,7 @@ import background from '../assets/background.svg';
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
 		<section id="hero">
-			<img
-				src="/ghp/src/assets/Captura de pantalla 2025-01-17 a las 21.26.41.png"
-				alt="test"
-			/>
+			<img src="/ghp/Captura de pantalla 2025-01-17 a las 21.26.41.png" alt="test" />
 			<a href="https://astro.build"
 				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
 			>
