--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@ import background from '../assets/background.svg';
 	<main>
 		<section id="hero">
 			<img
-				src="/ghp/assets/Captura de pantalla 2025-01-17 a las 21.26.41.png"
+				src="ghp/../../assets/Captura de pantalla 2025-01-17 a las 21.26.41.png"
 				alt="test"
 			/>
 			<a href="https://astro.build"
